<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.phu.pascalv01.tracnghiem1"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#e0f779">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:text="@string/cau1_1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#cacac9"
            android:id="@+id/cau1.1.a"
            android:padding="8dp"
            android:text="@string/dacau1_1a"
            android:textSize="18sp"
            android:onClick="sai"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#cacac9"
            android:id="@+id/cau1.1.b"
            android:padding="8dp"
            android:text="@string/dacau1_1b"
            android:textSize="18sp"
            android:onClick="sai"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#cacac9"
            android:id="@+id/cau1.1.c"
            android:padding="8dp"
            android:text="@string/dacau1_1c"
            android:textSize="18sp"
            android:onClick="dung"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#dff679"
        android:layout_marginTop="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/cau2_1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                tools:targetApi="jelly_bean"
                android:text="@string/cau2_1a"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/cau2_1b"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#cacac9"
            android:id="@+id/cau2.1.a"
            android:padding="8dp"
            android:text="@string/dacau2_1a"
            android:textSize="18sp"
            android:onClick="sai"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#cacac9"
            android:id="@+id/cau2.1.b"
            android:padding="8dp"
            android:text="@string/dacau2_1b"
            android:textSize="18sp"
            android:onClick="dung"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#cacac9"
            android:id="@+id/cau2.1.c"
            android:padding="8dp"
            android:text="@string/dacau2_1c"
            android:textSize="18sp"
            android:onClick="sai"/>
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
