<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.phu.pascalv01.Manhinhchinh">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff727"
                android:id="@+id/chude0"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cautruccoban"
                        android:textSize="22sp"
                        android:id="@+id/tenchude0"
                        android:padding="4dp"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tenchude0"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorAccent"
                        android:layout_below="@id/tenchude0"
                        android:id="@+id/line0"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/line0"
                        android:orientation="horizontal"
                        android:background="#fff5b3"
                        >
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/nd"
                            android:id="@+id/nd0"
                            android:background="@color/Transparent"
                            android:layout_weight="2" />

                        <view
                            android:layout_width="2dp"
                            android:layout_height="40dp"
                            class="android.support.v4.widget.DrawerLayout"
                            android:id="@+id/view2"
                            android:layout_weight="0"
                            android:background="@color/colorAccent"/>

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/bt"
                            android:id="@+id/bt0"
                            android:background="@color/Transparent"
                            android:layout_weight="2" />
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff727"
                android:layout_marginTop="8dp"
                android:id="@+id/chude1"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cautrucrenhanh"
                        android:textSize="22sp"
                        android:id="@+id/tenchude1"
                        android:padding="4dp"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorAccent"
                        android:layout_below="@id/tenchude1"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tenchude1"
                        android:orientation="horizontal"
                        >

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nd"
                            android:id="@+id/nd1"
                            android:layout_weight="1"
                            />
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bt"
                            android:id="@+id/bt1"
                            android:layout_weight="1"/>
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chude2"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="#2eff27"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cautruclap"
                        android:textSize="22sp"
                        android:id="@+id/tenchude2"
                        android:padding="4dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tenchude2"
                        android:orientation="horizontal"
                        >
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nd"
                            android:id="@+id/nd2"
                            android:layout_weight="1"
                            />
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bt"
                            android:id="@+id/bt2"
                            android:layout_weight="1"/>
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chude3"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="#ff9e27"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kieumang"
                        android:textSize="22sp"
                        android:id="@+id/tenchude3"
                        android:padding="4dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tenchude3"
                        android:orientation="horizontal"
                        >
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nd"
                            android:id="@+id/nd3"
                            android:layout_weight="1"
                            />
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bt"
                            android:id="@+id/bt3"
                            android:layout_weight="1"/>
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chude4"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="#b327ff"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kieuxau"
                        android:textSize="22sp"
                        android:id="@+id/tenchude4"
                        android:padding="4dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tenchude4"
                        android:orientation="horizontal"
                        >
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nd"
                            android:id="@+id/nd4"
                            android:layout_weight="1"
                            />
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bt"
                            android:id="@+id/bt4"
                            android:layout_weight="1"/>
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
